# NES_Emulator_CPP

./: .gitignore  CMakeLists.txt  README.md
diagrams/raw/: .$NES architecture.drawio.bkp  NES architecture.drawio
include/: config.h
src/: CMakeLists.txt  __main.cpp  main.cpp  main_window.cpp
src/Bus/: businterface.cpp  businterface.h
src/Cartridge/: cartridge.cpp  cartridge.h  cartridge_types.h  mapper.cpp  mapper.h
src/Cpu/: cpu6502.cpp  cpu6502.h  cpu6502_memory_map.h  cpu6502_opcodes.cpp  cpu6502_opcodes.h  cpu6502_types.h
src/Disassembler/: disassembler.cpp  disassembler.h
src/cpu/: cpu.cpp  cpu.h
src/legacy/Cpu/: cpu.cpp
src/mapper/: mapper.cpp  mapper.h
src/memory/: memory.cpp  memory.h  memory_ranges.h
src/ppu/: ppu.cpp  ppu.h
src/rom/: NESROM.cpp  NESROM.h
